--- a/Submission DR/Latex ready to format/4346 ready to format.tex
+++ b/Submission DR/Latex ready to format/4346 ready to format.tex
@@ -2,7 +2,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%% Keyfitz's entropy threshold age %%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \documentclass[a4paper,twoside, openright, 12pt, leqno]{article}
 
 % Upload template for articles
@@ -28,7 +27,6 @@
 \usepackage{booktabs}
  \usepackage[hyperfootnotes=false, colorlinks = true, allcolors = blue]{hyperref}		% Include hyperlinks
 \usepackage{fancyhdr}				% Fancy headers
-
 
 % Hyperlinks in references only for YEAR
 \makeatletter
@@ -170,7 +168,7 @@
 \bigskip
 
 \textbf{BACKGROUND} \\
-Indicators of relative variation of lifespans are important because they capture the dimensionless shape of aging. They are markers of inequality at the population level and express the uncertainty at the time of death at the individual level. In particular, the lifetable entropy $\,\xbar{H}$ represents the elasticity of life expectancy to a change in mortality and it has been used as an indicator of lifespan variation. However, it is unknown how this measure changes over time and whether a threshold age exists, as it does for other lifespan variation indicators.
+Indicators of relative variation of lifespans are markers of inequality at the population level and of uncertainty at the time of death at the individual level. In particular, the lifetable entropy $\,\xbar{H}$ represents the elasticity of life expectancy to a change in mortality. However, it is unknown how this measure changes over time and whether a threshold age exists, as it does for other lifespan variation indicators.
 \bigskip
 
 \noindent\textbf{RESULTS} \\
